# x2trade

./: CMakeLists.txt
config/: config.json
include/: config.h  http_client_pool.h  logger.h  strategy.h  websocket_client.h
src/: config.cpp  http_client_pool.cpp  logger.cpp  main.cpp  strategy.cpp  websocket_client.cpp
